# name-entity-finder

./: .gitignore  README.md  app.py  pyproject.toml
src/: __init__.py  app.py  ner_client.py
templates/: index.html
test/: __init__.py  test_api.py  test_doubles.py  test_index_e2e.py  test_ner_client.py
