[tool.poetry]
name = "tdd"
version = "0.1.0"
description = ""
authors = ["xd-ai <vice2361@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
spacy = "^3.2.0"
selenium = "^4.1.0"
pytest = "^6.2.5"
Flask = "^2.0.2"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
